fix tinymce dialog z-index

--- a/src/assets/layout/sass/_main.scss
+++ b/src/assets/layout/sass/_main.scss
@@ -203,3 +203,7 @@ a {
     }
 
 }
+
+.tox-tinymce-aux {
+    z-index: 9999999 !important;
+}
